# chat-app

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.sh
app/: app.py
app/db/: sqllit_db.py
app/routes/: auth.py  chat.py
app/schemas/: user.py
app/templates/: index.html
app/utile/: chat_manage.py
