[project]
name = "chat-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "starlette>=0.46.2",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401","E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true





[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
